update widget header color and fix collapse toggle

--- a/src/usr/local/www/bootstrap/css/pfSense.css
+++ b/src/usr/local/www/bootstrap/css/pfSense.css
@@ -127,6 +127,12 @@ tr.disabled th {
 	padding: 0 12px;
 }
 
+.panel-default>.panel-heading {
+	color: #fff;
+	background-color: #424242;
+	letter-spacing: 1px;
+}
+
 .panel {
 	margin-bottom: 10px;
 }
